# aes-gcm-risc0

./: BENCHMARK.md  Cargo.toml  README.md
.github/workflows/: ci.yml
aes-gcm/: Cargo.toml  README.md
aes-gcm-mini/: Cargo.toml
aes-gcm-mini/src/: lib.rs
aes-gcm/src/: aes.rs  aes_gcm.rs  gctr.rs  ghash.rs  lib.rs  utils.rs
host/: Cargo.toml
host/src/: main.rs
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
