[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = "1.1.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
shared = { path = "../shared" }
risc0-zkp = { version = "1.1.2", features = ["prove"] }
serde = "1.0.210"
serde_with = "3.11.0"
serde_json = "1.0.128"
bincode = "1.3.3"
